[package]
name = "rs-factory"
version = "0.1.0"
edition = "2021"

[lib]
name = "factory"

[dependencies]
serde = {version = "1.0.193", features = ["derive"], optional = true}
wasm-bindgen = { version = "0.2.89", optional = true }
serde-wasm-bindgen = { version = "0.6.3", optional = true }

[features]
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen", "dep:serde"]
