[package]
name = "rs-factory"
version = "0.1.0"
edition = "2021"

[lib]
name = "factory"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.89", optional = true }
lazy_static = { version = "1.4.0", optional = true }

[features]
wasm = ["dep:wasm-bindgen", "dep:lazy_static"]
